# rtxiplugins

./: .gitignore  README.md
Istep/: Istep.cpp  Istep.h  Makefile
Istep/include/: basicplot.cpp  basicplot.h  incrementalplot.cpp  incrementalplot.h
RealFIR/: realfir.cpp
mux/: Makefile  mux.cpp  mux.h
noise/: Makefile  noise.cpp  noise.h
oscilloscope/: Makefile.am  oscilloscope.cpp  oscilloscope.h  panel.cpp  panel.h  properties.cpp  properties.h  scope.cpp
ramp/: Makefile  ramp.cpp  ramp.h
realfir/: Makefile  firwin.cpp
sample_player/: Makefile  sample_player.cpp  sample_player.h  worker.cpp  worker.h
sine/: Makefile  sine.cpp  sine.h
square/: Cakefile  Makefile  square.cpp  square.h
tmp/: firwin.h  realfir.h
variancer/: Makefile  variancer.cpp  variancer.h
